--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 										using  Python and developed a dashboard using Power BI.<br />
 									.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/fifaimage.png" alt="" /></a>
+								<a href="#" class="image main"><img src="images/womenscup.png" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/MissTife/fifa-world_cup-visualization" class="button large">VIEW PROJECT</a></li>
 								</ul>
