--- a/index.html
+++ b/index.html
@@ -20,15 +20,8 @@
 				<!-- Intro -->
 					<div id="intro">
 						<div style="display: flex;">
-							<img src="/images/officialimage.jpg"  alt="faith ogunfuyi" class="responsive-image">
-							<style>
-							.responsive-image {
-							  max-width:100%;
-							  height:auto;
-							  width=200px;
-							  height=200px;
-							}	
-							</style>	
+							<img src="/images/officialimage.jpg"  width="200px" height="300px" alt="faith ogunfuyi">>
+								
 							<h1>Faith B. Ogunfuyi Portfolio<br /></h1>
 						</div>
 						<p>
