--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<div style="display: flex;">
-							<img src="/images/officialimage.jpg"  width="200px" height="300px" alt="faith ogunfuyi">>
+							<img src="/images/officialimage.jpg"  width="200px" height="200px" alt="faith ogunfuyi">
 								
 							<h1>Faith B. Ogunfuyi Portfolio<br /></h1>
 						</div>
