--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Faith Portfolio</title>
+		<title>Faith Ogunfuyi Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -22,7 +22,7 @@
 						<div style="display: flex;">
 							<img src="/images/officialimage.jpg"  width="200px" height="200px" alt="faith ogunfuyi">
 								
-							<h1>Faith B. Ogunfuyi Portfolio<br /></h1>
+							<h1>Faith Boluwatife Ogunfuyi <br /></h1>
 						</div>
 						<p>
 							I am a Data scientist,inspired by the insights I hope to get from any data I work  on and more importantly, I am interested in how this insights can be utilized and applied for growth and development in the ecosystem  that we live in.
