--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<div style="display: flex;">
 							<img src="/images/officialimage.jpg"  width="200px" height="200px" alt="faith ogunfuyi">
 								
-							<h1>Faith Boluwatife Ogunfuyi <br /></h1>
+							<h1>Faith B. Ogunfuyi <br /></h1>
 						</div>
 						<p>
 							I am a Data scientist,inspired by the insights I hope to get from any data I work  on and more importantly, I am interested in how this insights can be utilized and applied for growth and development in the ecosystem  that we live in.
@@ -47,6 +47,8 @@
 							<li class="active"><a href="index.html">PROJECTS</a></li>
 							<li><a href="https://medium.com/@faithboluwatife03">MEDIUM</a></li>
 							<li><a href="https://github.com/MissTife">GITHUB</a></li>
+							<li><a href="https://drive.google.com/file/d/1f-9Fyv1xz319TGRQ2AAfDV66D4mLlIi5/view?usp=sharing">RESUME</a></li>
+
 						</ul>
 						<ul class="icons">
 							<li><a href="https://twitter.com/Faith_Tife03" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -104,7 +106,7 @@
 								<article>
 									<header>
 										<span class="date">February 11, 2023</span>
-										<h2><a href="#">Superstore Performance Analysis
+										<h2><a href="#">Superstore's Performance Analysis
 											<br />
 										</a></h2>
 									</header>
@@ -122,7 +124,7 @@
 								<article>
 									<header>
 										<span class="date">October 13, 2022</span>
-										<h2><a href="#">Company"s Data Insight
+										<h2><a href="#">Company's Data Insight
 											<br />
 										</a></h2>
 									</header>
