--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<div style="display: flex;">
-							<img src="/images/officialimage.jpg"  width="200px" height="200px" alt="faith ogunfuyi">
+							<img src="/images/officialimage.jpg"  width="300px" height="300px" alt="faith ogunfuyi">
 								
 							<h1>Faith B. Ogunfuyi <br /></h1>
 						</div>
@@ -66,7 +66,7 @@
 									<span class="date">March 14, 2023</span>
 									<h2><a href="#">FIFA WOMEN'S WORLD CUP<br />
 									</a></h2>
-									<p>I explored and cleeaned the FIFA Women's World Cup Stats dataset from Kaggle,<br />
+									<p>I explored and cleaned the FIFA Women's World Cup Stats dataset from Kaggle,<br />
 										using  Python and developed a dashboard using Power BI.<br />
 									.</p>
 								</header>
@@ -98,7 +98,7 @@
 									</header>
 									<a href="#" class="image fit"><img src="images/assistant.jpg" alt="" /></a>
 									<p>I built a virtual assistant capable of voice recognition and speech to text to help navigate the webpages of a webapp.it is helpful
-										for people with diabilties to ease thier shopping experience and as well make online shopping experience better for everyone .</p>
+										for people with disabilities to ease thier shopping experience and as well make online shopping experience better for everyone .</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/MissTife/Smart-Shopper-virtual-assistant" class="button">view project</a></li>
 									</ul>
