--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<div style="display: flex;">
+						<div style="display: flex; flex-wrap:wrap">
 							<img src="/images/officialimage.jpg"  width="300px" height="300px" alt="faith ogunfuyi">
 								
 							<h1>Faith B. Ogunfuyi <br /></h1>
