--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 							<li><a href="https://www.linkedin.com/in/faith-ogunfuyi-9244501a5/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="https://github.com/MissTife" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
+						<button class='nav-toggle' aria-label='toggle navigation menu'>
+							<span class='menu=icon'></span>
+						</button>
 					</nav>
 
 				<!-- Main -->
