--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-		<scipt src="main.js"></script>
+		<scipt src="https://github.com/MissTife/MissTife.github.io/blob/main/assets/js/main.js"></script>
 	</head>
 	<body class="is-preload">
 
