--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 						</div>
 						<p>
 							I am a Data scientist,inspired by the insights I hope to get from any data I work  on and more importantly, I am interested in how this insights can be utilized and applied for growth and development in the ecosystem  that we live in.
-							I am well skilled in using Excel, Python, R, SQL , Power Bi and Google tools for Cleaning,Processing,Building models,Visualization and Presentation of Data Projects. 
+							I am well skilled in using Excel, Python, R, SQL , Power Bi and Google tools for Cleaning,Processing,Building models,Visualization and Presentation of Data Projects.Check out my blog to read my stories
 							
-							 <a href="https://github.com/MissTife">@MissTife</a> <a></a><br />
+							 <a href="https://medium.com/@faithboluwatife03">@FaithTife</a> <a></a><br />
 							<a></a>
 						</p>
 						<ul class="actions">
@@ -46,7 +46,6 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">PROJECTS</a></li>
-							<li><a href="https://medium.com/@faithboluwatife03">MEDIUM</a></li>
 							<li><a href="https://github.com/MissTife">GITHUB</a></li>
 							<li><a href="https://drive.google.com/file/d/1f-9Fyv1xz319TGRQ2AAfDV66D4mLlIi5/view?usp=sharing">RESUME</a></li>
 
