--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						</div>
 						<p>
 							I am a Data scientist,inspired by the insights I hope to get from any data I work  on and more importantly, I am interested in how this insights can be utilized and applied for growth and development in the ecosystem  that we live in.
-							I am well skilled in using Excel, Python, R, SQL , Power Bi and Google tools for Cleaning,Processing,Building models,Visualization and Presentation of Data Projects.Check out my blog to read my stories
+							I am well skilled in using Excel, Python, R, SQL , Power Bi and Google tools for Cleaning,Processing,Building models,Visualization and Presentation of Data Projects.Check out my blog to read my stories on Medium.
 							
 							 <a href="https://medium.com/@faithboluwatife03">@FaithTife</a> <a></a><br />
 							<a></a>
@@ -50,6 +50,11 @@
 							<li><a href="https://drive.google.com/file/d/1f-9Fyv1xz319TGRQ2AAfDV66D4mLlIi5/view?usp=sharing">RESUME</a></li>
 
 						</ul>
+                                                  <ul class='dropdown'>
+                                                  <li class='dropdown-item'><a href='#'>"index.html"</a></li>
+                                                  <li class='dropdown-item'><a href='#'>"https://github.com/MissTife"</a></li>
+                                                  <li class='dropdown-item'><a href='#'>"https://drive.google.com/file/d/1f-9Fyv1xz319TGRQ2AAfDV66D4mLlIi5/view?usp=sharing"</a></li>
+                                                </ul>
 						<ul class="icons">
 							<li><a href="https://twitter.com/Faith_Tife03" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.linkedin.com/in/faith-ogunfuyi-9244501a5/" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
