--- a/index.html
+++ b/index.html
@@ -51,8 +51,7 @@
 							<li><a href="https://drive.google.com/file/d/1f-9Fyv1xz319TGRQ2AAfDV66D4mLlIi5/view?usp=sharing">RESUME</a></li>
 
 						</ul>
-                                                  <ul class='dropdown'>
-                                                  <li class='dropdown-item'><a href='#'>"index.html"</a></li>
+                                                  <ul class='dropdown'
                                                   <li class='dropdown-item'><a href='#'>"https://github.com/MissTife"</a></li>
                                                   <li class='dropdown-item'><a href='#'>"https://drive.google.com/file/d/1f-9Fyv1xz319TGRQ2AAfDV66D4mLlIi5/view?usp=sharing"</a></li>
                                                 </ul>
