--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 											<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/assistant.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/superstoreimage.jpg" alt="" /></a>
 									<p>For this project, I explored data from a store to help them understand which products, regions, categories and customer segments they shoul target or avoid</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/MissTife/Exploratory-Data-Analysis-in-SQL" class="button">view project</a></li>
