--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<div style="display: flex; flex-wrap:wrap">
-						<img src="/images/officialimage.jpg" width="200px" height="200px" alt="faith ogunfuyi">
+						<img src="/images/B1DE397C-1722-453B-B660-069D90C420EC.jpeg" width="200px" height="200px" alt="faith ogunfuyi">
 						<h1>Faith B. Ogunfuyi<br />
 						</h1>
 						</div>
