--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 
 				<!-- Copyright -->
 					<div id="copyright">
-						<ul><li>&copy; Faith </li><li>DTifeesign: <a href="faithboluwatife03@gmail.com">Faith Tife</a></li></ul>
+						<ul><li>&copy; Faith </li><li>Design: <a href="faithboluwatife03@gmail.com">Faith Tife</a></li></ul>
 					</div>
 
 			</div>
