--- a/index.html
+++ b/index.html
@@ -101,6 +101,18 @@
 								</article>
 								<article>
 									<header>
+										<span class="date">March 15, 2023</span>
+										<h2><a href="#">Sentiment Analysis<br />
+										</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="new image.jpeg" alt="" /></a>
+									<p>This analysis aim at identifying and analysisng sentences from victims of depression and suicidal thoughts.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/MissTife/Suicide-Depression-Analysis" class="button">view project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<span class="date">February 11, 2023</span>
 										<h2><a href="#">Superstore's Performance Analysis
 											<br />
