--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">March 15, 2023</span>
+										<span class="date">March 29, 2023</span>
 										<h2><a href="#">Sentiment Analysis<br />
 										</a></h2>
 									</header>
-									<a href="#" class="image fit"><img src="new image.jpeg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/new image.jpeg" alt="" /></a>
 									<p>This analysis aim at identifying and analysisng sentences from victims of depression and suicidal thoughts.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/MissTife/Suicide-Depression-Analysis" class="button">view project</a></li>
