--- a/index.html
+++ b/index.html
@@ -76,6 +76,18 @@
 							<section class="posts">
 								<article>
 									<header>
+										<span class="date">August 15, 2023</span>
+										<h2><a href="#">American sign language Classification<br />
+										</a></h2>
+									</header>
+									<a href="#" class="image fit"><img src="images/asl.jpeg" alt="" /></a>
+									<p>In a world where technology continues to break down barriers,it's important to consider how machine learning can play a role in enhancing sign language communication</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/MissTife/sync-internship/blob/main/notebooksign.ipynb" class="button">view project</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<span class="date">January 15, 2023</span>
 										<h2><a href="#">CUSTOMER'S CLASSIFICATION<br />
 										</a></h2>
