--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
 						<h1>Faith B. Ogunfuyi<br />
 						</h1>
 						</div>
-						<p>I am a  Data scientist 
-							,inspired by the insights i hope to get from any data I work on. More importantly,I am interested in how this insights can be utilized and applied, for growth and development in the ecosystem that we live in. I am well skilled in using Excel, Python, R, SQL,Power BI and Google tools for cleaning, Processing, Building Models,Visualization and Presentation of Data Projects.
+						<p>I am driven by the insights that can be uncovered from data and, more importantly, by how those insights can be applied to drive growth and meaningful development within our ecosystem. I am skilled in transforming raw data into actionable knowledge through cleaning, processing, analysis, and visualization of data to build impactful models and tell meaningful stories that support decision making.
 							Check out my blog to read my Data stories <a href="https://medium.com/@faithboluwatife03">@FaithTife</a> <a></a><br />
 						<a></a></p>
 						<ul class="actions">
@@ -226,3 +225,4 @@
 
 	</body>
 </html>
+
